--- a/BootCamp_22_09_2018.ipynb
+++ b/BootCamp_22_09_2018.ipynb
@@ -985,11 +985,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 145,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-145-558de67f608d>, line 21)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-145-558de67f608d>\"\u001b[0;36m, line \u001b[0;32m21\u001b[0m\n\u001b[0;31m    def __str__(self):\u001b[0m\n\u001b[0m      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "class Czlowiek(): \n",
     "    def __init__(self, imie, wzrost, waga,  kolor_oczu):\n",
@@ -1007,6 +1016,14 @@
     "            print ('{} jest wysoki'.format(self.imie))\n",
     "        else:\n",
     "            print ('{} jest niski'.format(self.imie))\n",
+    "            \n",
+    "    def __repr__(self):\n",
+    "        return ('To jest {} ma {} cm wzrostu waży {} kg'.format(self.imie, self.wzrost, self.waga)\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        return 'To jest {} ma {} cm wzrostu waży {} kg'.format(self.imie, self.wzrost, self.waga\n",
+    "        \n",
+    "    \n",
     "        \n",
     "        \n",
     "        \n",
@@ -1016,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 142,
    "metadata": {
     "collapsed": false
    },
@@ -1027,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 143,
    "metadata": {
     "collapsed": false
    },
@@ -1038,7 +1055,7 @@
        "'To jest Wojtek ma 179 cm wzrostu waży 98 kg  '"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1049,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 144,
    "metadata": {
     "collapsed": false
    },
@@ -1064,6 +1081,209 @@
    ],
    "source": [
     "wojtek.czy_wysoki()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name '__repr__' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-140-6c1ee365125a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0m__repr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwojtek\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name '__repr__' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "__repr__(wojtek)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Porównanie class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class Samochod:\n",
+    "    ILOSC_KOL = 4 \n",
+    "    def __init__(self, marka, model, kolor, przebieg, moc):\n",
+    "        self.marka = marka\n",
+    "        self.model = model\n",
+    "        self.kolor = kolor\n",
+    "        self.przebieg = przebieg\n",
+    "        self.moc = moc\n",
+    "    @property\n",
+    "    def full_name(self):\n",
+    "        return \"To jest {} {}\".format(self.marka, self.model)\n",
+    "        \n",
+    "    #metody specjane __str__\n",
+    "    def __str__(self):\n",
+    "        return self.full_name\n",
+    "    def __bool__ (self):\n",
+    "        return False\n",
+    "    \n",
+    "    def __gt__ (self, other):\n",
+    "        return self.moc > other.moc\n",
+    "    \n",
+    "    def \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "scania = Samochod('Scania', 'cos', 'niebieski', 154000, 3000)\n",
+    "mazda = Samochod('mazda','6', 'czerwony', 13000, 165)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scania < mazda"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scania.moc > mazda.moc\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "class Samochod:\n",
+    "    ILOSC_KOL = 4\n",
+    "    def __init__(self, marka, model, kolor, przebieg, moc, spalanie):\n",
+    "        self.marka = marka\n",
+    "        self.model = model\n",
+    "        self.kolor = kolor\n",
+    "        self.przebieg = przebieg\n",
+    "        self.moc = moc\n",
+    "        self.spalanie = spalanie\n",
+    "    \n",
+    "\n",
+    "    @property\n",
+    "    def pelna_nazwa(self):\n",
+    "        return \"To jest {} {}\".format(self.marka, self.model)\n",
+    "\n",
+    "    \n",
+    "\n",
+    "    # metody specjalne __str__\n",
+    "    def __str__(self):\n",
+    "        return self.pelna_nazwa\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return \"Obiekt klasy: {}, marka: {}. model {}\".format(\n",
+    "            self.__class__,\n",
+    "            self.marka,\n",
+    "            self.model\n",
+    "        )\n",
+    "    \n",
+    "    def __gt__(self, other):\n",
+    "        return self.przebieg > other.przebieg\n",
+    "\n",
+    "    def wyswietl_przebieg(self):\n",
+    "        print (self.przebieg)\n",
+    "        \n",
+    "    def konwertuj_miele_na_galon_l_na_100km(self):\n",
+    "        spalanie_skonwetowane = (100 * 3.785411784) / (1.609344 * self.spalanie)\n",
+    "        print (spalanie_skonwetowane)\n",
+    "    \n",
+    "        \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "scania = Samochod('Scania', 'cos', 'niebieski', 154000, 3000, 12)\n",
+    "mazda = Samochod('mazda','6', 'czerwony', 13000, 165,42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.600347222222221\n",
+      "19.601215277777776\n"
+     ]
+    }
+   ],
+   "source": [
+    "mazda.konwertuj_miele_na_galon_l_na_100km()\n",
+    "scania.konwertuj_miele_na_galon_l_na_100km()"
    ]
   },
   {
