--- a/BootCamp_22_09_2018.ipynb
+++ b/BootCamp_22_09_2018.ipynb
@@ -1616,14 +1616,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "sa"
+    "class Samochod_dostawczy(Samochod):\n",
+    "    \"\"\"\"To jest somochó dostawczy\"\"\"\n",
+    "    \n",
+    "    def __init__(self, marka, model, kolor, rocznik, moc, ladownosc):\n",
+    "        self.marka = marka\n",
+    "        self.model = model\n",
+    "        self.kolor = kolor\n",
+    "        self.rocznik = rocznik\n",
+    "        self.moc = moc\n",
+    "        self.ladownosc = ladownosc"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "volvo = Samochod_dostawczy('Volvo', 'F12', 'czarny', 2015, 400, 50000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50000"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "volvo.ladownosc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### dodawanie parametów"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "class Samochod_dostawczy(Samochod):\n",
+    "    \"\"\"\"To jest somochó dostawczy\"\"\"\n",
+    "    \n",
+    "    def __init__(self, marka, model, kolor, rocznik, moc, ladownosc):\n",
+    "        super().__init__(marka, model, kolor, przebieg, moc)\n",
+    "        self.ladownosc = ladownosc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'przebieg' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-87-98a26c8c0524>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mvolvo\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSamochod_dostawczy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Volvo'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'F12'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'czarny'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2015\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m400\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m50000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-86-2cc64f9d8987>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, marka, model, kolor, rocznik, moc, ladownosc)\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmarka\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkolor\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrocznik\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmoc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mladownosc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m         \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmarka\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkolor\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprzebieg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmoc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mladownosc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mladownosc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'przebieg' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "volvo = Samochod_dostawczy('Volvo', 'F12', 'czarny', 2015, 400, 50000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class Samochod_dostawczy(Samochod):\n",
+    "\n",
+    "    \"\"\"To jest klasa samochod dostawczy\"\"\"\n",
+    "\n",
+    "    def __init__(self, marka, model, przebieg, moc, ladownosc):\n",
+    "\n",
+    "        super().__init__(marka, model, kolor, przebieg, moc)\n",
+    "\n",
+    "        self.ladownosc = ladownosc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
